--- a/package.json
+++ b/package.json
@@ -31,8 +31,14 @@
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.5",
+    "@primeuix/themes": "^1.2.5",
+    "@tailwindcss/postcss": "^4.1.14",
     "express": "^5.1.0",
+    "postcss": "^8.5.6",
+    "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.14",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -53,7 +59,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "3.6.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "~5.8.2",
     "typescript-eslint": "8.46.0"
   }
