--- a/package.json
+++ b/package.json
@@ -9,18 +9,11 @@
     "test": "ng test",
     "serve:ssr:movie-catalog": "node dist/movie-catalog/server/server.mjs",
     "lint": "ng lint",
+    "lint:architecture": "steiger ./src",
+    "lint:architecture:watch": "steiger ./src --watch",
     "format": "prettier --write \"src/**/*.{ts,html,scss}\""
   },
-  "prettier": {
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
-  },
+  "type": "module",
   "private": true,
   "dependencies": {
     "@angular/common": "^20.1.0",
@@ -46,6 +39,7 @@
     "@angular/build": "^20.1.5",
     "@angular/cli": "^20.1.5",
     "@angular/compiler-cli": "^20.1.0",
+    "@feature-sliced/steiger-plugin": "^0.5.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
@@ -62,6 +56,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "steiger": "^0.5.11",
     "typescript": "~5.8.2",
     "typescript-eslint": "8.46.0"
   }
