--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "ng lint",
     "lint:architecture": "steiger ./src",
     "lint:architecture:watch": "steiger ./src --watch",
-    "format": "prettier --write \"src/**/*.{ts,html,scss}\""
+    "format": "prettier --write \"src/**/*.{ts,html,scss}\"",
+    "format:pretty": "pretty-quick --staged",
+    "prepare": "husky install"
   },
   "type": "module",
   "private": true,
@@ -48,6 +50,7 @@
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^8.0.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -56,6 +59,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "pretty-quick": "^4.2.2",
     "steiger": "^0.5.11",
     "typescript": "~5.8.2",
     "typescript-eslint": "8.46.0"
