--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:server": "node out-tsc/server/index.js",
     "build": "ng build",
+    "build:server": "tsc -P tsconfig.server.json",
     "watch": "ng build --watch --configuration development",
+    "watch:server": "nodemon --watch server --exec ts-node -P tsconfig.server.json server/index.ts",
+    "copy:server": "cpx \"server/**/*.json\" out-tsc/server",
     "test": "ng test",
     "serve:ssr:movie-catalog": "node dist/movie-catalog/server/server.mjs",
     "lint": "ng lint",
@@ -46,8 +50,9 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^20.17.19",
+    "@types/node": "^20.19.22",
     "angular-eslint": "20.4.0",
+    "cpx": "^1.5.0",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -58,10 +63,12 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "pretty-quick": "^4.2.2",
     "steiger": "^0.5.11",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.2",
     "typescript-eslint": "8.46.0"
   }
