--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -59,7 +65,8 @@
               "buildTarget": "movie-catalog:build:production"
             },
             "development": {
-              "buildTarget": "movie-catalog:build:development"
+              "buildTarget": "movie-catalog:build:development",
+              "proxyConfig": "proxy.dev.json"
             }
           },
           "defaultConfiguration": "development"
